service/tests/snapshots/integration_tests__tests__users__register__register-all_blank-headers.snap
---
source: tests/integration_tests.rs
expression: response.headers()
---
"HTTP/1.1 422 Unprocessable Entity\ncontent-type: application/problem+json"
